retrieveUnpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CC_Score__c</fullName>
        <label>CC Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent(740+)</fullName>
                </value>
                <value>
                    <fullName>Good(700+)</fullName>
                </value>
                <value>
                    <fullName>Average(640+)</fullName>
                </value>
                <value>
                    <fullName>Need Some work (639&amp;below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_lateral_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-lateral Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_rate_of_Interest__c</fullName>
        <label>Fixed rate of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tenure_in_years__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2.875</fullName>
                </value>
                <value>
                    <fullName>2.72</fullName>
                </value>
                <value>
                    <fullName>2.625</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_DOB__c</fullName>
        <label>Guarantor DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_Documents_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guarantor Documents submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantor_Email__c</fullName>
        <label>Guarantor Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_First_Name__c</fullName>
        <label>Guarantor First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Last_Name__c</fullName>
        <label>Guarantor Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Mobile__c</fullName>
        <label>Guarantor Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guarantor_SSN__c</fullName>
        <label>Guarantor SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Mortgage_Loans__c</fullName>
        <label>Other Mortgage Loans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paycheck_stubs_from_last_30_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paycheck stubs from last 30 days.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payments_Frequency__c</fullName>
        <label>Payments Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Documentation__c</fullName>
        <label>Process Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partially received</fullName>
                </value>
                <value>
                    <fullName>Fully received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process_Documentation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All documents submitted</fullName>
                </value>
                <value>
                    <fullName>Further documents are required</fullName>
                </value>
                <value>
                    <fullName>Few documents are not correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure_in_years__c</fullName>
        <label>Tenure(in years)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W2_or_I_9_forms_from_past_2_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W2 or I-9 forms from past 2 years</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>